--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
   background: #333333;
-  height: 800px;
+  height: 100vh;
 }
 
-h1{
+h1 {
   color: white;
+}
+
+.btnPlay {
+  background: white;
+  /* background: -o-linear-gradient(#FFAA77,#FF5500); */
 }
